[project]
name = "python-best-template"
version = "0.1.0"
description = "This is the best template for Python projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
